...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="30dp">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="EDIT"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                />
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="100dp"
...
